Add theme, transliterate, goauth

--- a/Frontend/public/index.html
+++ b/Frontend/public/index.html
@@ -5,16 +5,19 @@
   <meta charset="utf-8" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Montserrat:wght@300;400;600;700;800&display=swap"
     rel="stylesheet">
-  <title>React App</title>
+    <script src="%PUBLIC_URL%/jsapi.js"></script>
+    <title>React App</title>
 </head>
 
 <body>
   <div id="root"></div>
+  
   <script src="../src/index.js" type="text/JSX"></script>
 </body>
 
